--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
     "/js/app.js": "/js/app.js?id=28d8354d3c59a26e7714",
-    "/css/app.css": "/css/app.css?id=df161b2174c13b877404",
+    "/css/app.css": "/css/app.css?id=f7d0b0f4844ea9e98366",
     "/images/404.png": "/images/404.png?id=1d2c9627617a68df1b9c",
     "/images/banner.jpg": "/images/banner.jpg?id=9d2682b91f7d4849be40",
     "/images/cart.png": "/images/cart.png?id=815db83fc1340d80345f",
@@ -17,5 +17,6 @@
     "/images/logo_min.png": "/images/logo_min.png?id=d20a0669f46fd3e2ddbc",
     "/images/logo_min.svg": "/images/logo_min.svg?id=8c5fd6b0102b92b41f3e",
     "/images/menu.png": "/images/menu.png?id=c9e17cb5497617bbffe2",
-    "/images/payments.png": "/images/payments.png?id=b8220951e768f542db27"
+    "/images/payments.png": "/images/payments.png?id=b8220951e768f542db27",
+    "/images/sale-1.png": "/images/sale-1.png?id=7b599ee0d2409e7b9fbf"
 }
