--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js?id=a32adb6cf9ef68f630ec",
+    "/js/app.js": "/js/app.js?id=1290968369edb3bf888d",
     "/css/app.css": "/css/app.css?id=06fbdb9dd3e52c780205",
     "/images/404.png": "/images/404.png?id=1d2c9627617a68df1b9c",
     "/images/banner.jpg": "/images/banner.jpg?id=9d2682b91f7d4849be40",
@@ -18,6 +18,7 @@
     "/images/logo_min.svg": "/images/logo_min.svg?id=8c5fd6b0102b92b41f3e",
     "/images/menu.png": "/images/menu.png?id=c9e17cb5497617bbffe2",
     "/images/payments.png": "/images/payments.png?id=b8220951e768f542db27",
+    "/images/sale-1.png": "/images/sale-1.png?id=7b599ee0d2409e7b9fbf",
     "/images/sale-icon.png": "/images/sale-icon.png?id=e971595fe71e6c198d92",
     "/images/sale-price.png": "/images/sale-price.png?id=a30da45d9854b93999f1",
     "/images/sale.png": "/images/sale.png?id=1b8922599e64d840416e"
