--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,10 @@
     "require": {
         "php": "^8.0",
         "ext-curl": "*",
+        "ext-pdo": "*",
         "ext-simplexml": "*",
         "cviebrock/eloquent-sluggable": "^8.0",
+        "diglactic/laravel-breadcrumbs": "^7.0",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
