--- a/panel/package.json
+++ b/panel/package.json
@@ -9,6 +9,7 @@
     "@types/react-dom": "^17.0.9",
     "antd": "^4.18.2",
     "classnames": "^2.3.1",
+    "draft-js": "^0.11.7",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
