--- a/site/docker/prod/php-fpm/Dockerfile
+++ b/site/docker/prod/php-fpm/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /app
 
 COPY ./composer.json ./composer.lock ./
 
-RUN composer install --no-dev --prefer-dist --no-progress --no-suggest --optimize-autoloader \
+RUN composer install --no-dev --no-scripts --prefer-dist --no-progress --no-suggest --optimize-autoloader \
     && rm -rf /root/.composer/cache
 
 ### FPM ###
@@ -34,7 +34,8 @@ WORKDIR /app
 COPY --from=builder /app ./
 COPY ./ ./
 
-RUN chown www-data:www-data ./storage ./bootstrap/cache -R
+RUN chown www-data:www-data ./storage ./bootstrap/cache -R \
+    && php -r "copy('.env.prod', '.env');" && php artisan key:generate --ansi
 
 HEALTHCHECK --interval=5s --timeout=3s --start-period=1s \
     CMD REDIRECT_STATUS=true SCRIPT_NAME=/ping SCRIPT_FILENAME=/ping REQUEST_METHOD=GET \
