add testing build

--- a/site/public/mix-manifest.json
+++ b/site/public/mix-manifest.json
@@ -1,6 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=edc7e1e845b5590326e7",
-    "/css/app.css": "/css/app.css?id=4086665112c6fa227a45",
+    "/js/app.js": "/js/app.js?id=ca2f0640235924c84f75",
+    "/css/app.css": "/css/app.css?id=59b36bde6e9224232dc0",
     "/images/404.png": "/images/404.png?id=1d2c9627617a68df1b9c",
     "/images/banner.jpg": "/images/banner.jpg?id=9d2682b91f7d4849be40",
     "/images/cart.png": "/images/cart.png?id=815db83fc1340d80345f",
@@ -15,10 +15,11 @@
     "/images/like.png": "/images/like.png?id=cd7039fd5564e798560f",
     "/images/logo.svg": "/images/logo.svg?id=5349ac7d05f535c116db",
     "/images/logo_min.png": "/images/logo_min.png?id=d20a0669f46fd3e2ddbc",
-    "/images/logo_min.svg": "/images/logo_min.svg?id=8c5fd6b0102b92b41f3e",
+    "/images/logo_min.svg": "/images/logo_min.svg?id=b540f6de2784fb738020",
     "/images/menu.png": "/images/menu.png?id=c9e17cb5497617bbffe2",
     "/images/payments.png": "/images/payments.png?id=b8220951e768f542db27",
     "/images/sale-icon.png": "/images/sale-icon.png?id=e971595fe71e6c198d92",
     "/images/sale-price.png": "/images/sale-price.png?id=a30da45d9854b93999f1",
-    "/images/sale.png": "/images/sale.png?id=1b8922599e64d840416e"
+    "/images/sale.png": "/images/sale.png?id=d9008a2f42bda34daf4e",
+    "/images/sale.svg": "/images/sale.svg?id=251344710ea1ea4e16ad"
 }
