--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,7 @@ version: '3.9'
 services:
   traefik:
     image: traefik:2.6
-    command: --providers.docker=true --providers.docker.exposedByDefault=false
-      --entryPoints.http.address=:80
+    command: --providers.docker=true --providers.docker.exposedByDefault=false --entryPoints.http.address=:80
     ports:
       - "80:80"
     networks:
@@ -52,8 +51,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.site.rule=Host(`pharm.test`) ||
-        Host(`www.pharm.test`)
+      - traefik.http.routers.site.rule=Host(`pharm.test`) || Host(`www.pharm.test`)
       - traefik.http.routers.site.entryPoints=http
       - traefik.http.services.site.loadBalancer.server.port=80
       - traefik.http.middlewares.site-redirect.redirectRegex.regex=^(https?://)www.pharm.test/(.*)$$
@@ -126,7 +124,6 @@ services:
 volumes:
   db-postgres:
 
-    null
 networks:
   traefik-public:
     name: traefik-public
