--- a/site/docker/prod/nginx/conf.d/default.conf
+++ b/site/docker/prod/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     charset utf-8;
-    index index.html;
+    index index.php;
     root /app/public;
     server_tokens off;
 
@@ -25,7 +25,17 @@ server {
     }
 
     location / {
-        add_header X-Frame-Options "SAMEORIGIN";
-        try_files $uri $uri/ /index.html;
+        try_files $uri /index.php?$args;
+    }
+
+    location ~ \.php$ {
+        set $upstream site-php-fpm:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass $upstream;
+        fastcgi_index index.php;
+        fastcgi_read_timeout 300;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
