--- a/panel/docker/prod/nginx/Dockerfile
+++ b/panel/docker/prod/nginx/Dockerfile
@@ -18,4 +18,4 @@ WORKDIR /app
 
 COPY --from=builder /app/build ./public
 
-HEALTHCHECK --interval=5s --timeout=3s --start-period=1s CMD curl --fail http://panel.120на80.рф/health || exit 1
+HEALTHCHECK --interval=5s --timeout=3s --start-period=1s CMD curl --fail http://panel.pharm.test/health || exit 1
