--- a/panel/package.json
+++ b/panel/package.json
@@ -4,15 +4,20 @@
   "private": true,
   "devDependencies": {
     "@reduxjs/toolkit": "^1.7.1",
+    "@types/draft-convert": "^2.1.4",
+    "@types/draft-js": "^0.11.9",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "antd": "^4.18.2",
     "classnames": "^2.3.1",
+    "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-sanctum": "^2.1.2",
