--- a/docker-compose-testing.yml
+++ b/docker-compose-testing.yml
@@ -24,7 +24,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.api.rule=Host(`panel.pharm.test`)
+      - traefik.http.routers.api.rule=Host(`panel.аптека-05.рф`)
       - traefik.http.routers.api.entryPoints=http
       - traefik.http.services.api.loadBalancer.server.port=80
 
@@ -36,11 +36,11 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.frontend.rule=Host(`pharm.test`) || Host(`www.pharm.test`)
+      - traefik.http.routers.frontend.rule=Host(`аптека-05.рф`) || Host(`www.аптека-05.рф`)
       - traefik.http.routers.frontend.entryPoints=http
       - traefik.http.services.frontend.loadBalancer.server.port=80
-      - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.pharm.test/(.*)$$
-      - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}pharm.test/$${2}
+      - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.аптека-05.рф/(.*)$$
+      - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}аптека-05.рф/$${2}
       - traefik.http.middlewares.frontend-redirect.redirectRegex.permanent=true
       - traefik.http.routers.frontend.middlewares=frontend-redirect
 
@@ -60,9 +60,6 @@ services:
       POSTGRES_DB: app
     volumes:
       - db-postgres:/var/lib/postgresql/data
-
-  mailer:
-    image: mailhog/mailhog
 
   redis:
     image: redis:6.2-alpine
