--- a/site/docker/dev/node/Dockerfile
+++ b/site/docker/dev/node/Dockerfile
@@ -4,4 +4,4 @@ RUN apk add --no-cache curl
 
 WORKDIR /app
 
-HEALTHCHECK --interval=5s --timeout=5s --start-period=1s CMD curl --fail http://pharm.test:3000/health || exit 1
+HEALTHCHECK --interval=5s --timeout=5s --start-period=1s CMD curl --fail http://127.0.0.1:3000/health || exit 1
