--- a/panel/docker/dev/nginx/conf.d/default.conf
+++ b/panel/docker/dev/nginx/conf.d/default.conf
@@ -13,26 +13,23 @@ server {
     }
 
     location /sockjs-node {
-        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "Upgrade";
-        proxy_pass        $upstream;
+        proxy_pass        http://panel-node:3000;
         proxy_redirect    off;
     }
 
     location /api {
-        set $upstream http://site;
         rewrite ^/api/?(.*) /$1 break;
         proxy_set_header  Host $host;
-        proxy_pass        $upstream;
+        proxy_pass        http://site;
         proxy_redirect    off;
     }
 
     location / {
-        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
-        proxy_pass        $upstream;
+        proxy_pass        http://panel-node:3000;
         proxy_redirect    off;
     }
 }
