--- a/panel/docker/prod/nginx/conf.d/default.conf
+++ b/panel/docker/prod/nginx/conf.d/default.conf
@@ -25,10 +25,9 @@ server {
     }
 
     location /api {
-        set $upstream http://site;
         rewrite ^/api/?(.*) /$1 break;
         proxy_set_header  Host $host;
-        proxy_pass        $upstream;
+        proxy_pass        http://site;
         proxy_redirect    off;
     }
 
