--- a/panel/docker/dev/nginx/conf.d/default.conf
+++ b/panel/docker/dev/nginx/conf.d/default.conf
@@ -13,23 +13,26 @@ server {
     }
 
     location /sockjs-node {
+        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
         proxy_set_header  Upgrade $http_upgrade;
         proxy_set_header  Connection "Upgrade";
-        proxy_pass        http://panel-node:3000;
+        proxy_pass        $upstream;
         proxy_redirect    off;
     }
 
     location /api {
+        set $upstream http://site;
         rewrite ^/api/?(.*) /$1 break;
         proxy_set_header  Host $host;
-        proxy_pass        http://site;
+        proxy_pass        $upstream;
         proxy_redirect    off;
     }
 
     location / {
+        set $upstream http://panel-node:3000;
         proxy_set_header  Host $host;
-        proxy_pass        http://panel-node:3000;
+        proxy_pass        $upstream;
         proxy_redirect    off;
     }
 }
