--- a/site/docker/prod/nginx/conf.d/default.conf
+++ b/site/docker/prod/nginx/conf.d/default.conf
@@ -29,8 +29,9 @@ server {
     }
 
     location ~ \.php$ {
+        set $upstream site-php-fpm:9000;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass site-php-fpm:9000;
+        fastcgi_pass $upstream;
         fastcgi_index index.php;
         fastcgi_read_timeout 300;
         include fastcgi_params;
