--- a/docker-compose-testing.yml
+++ b/docker-compose-testing.yml
@@ -24,7 +24,7 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.api.rule=Host(`panel.аптека-05.рф`)
+      - traefik.http.routers.api.rule=Host(`panel.xn--05-6kcay4a7ay.xn--p1ai`)
       - traefik.http.routers.api.entryPoints=http
       - traefik.http.services.api.loadBalancer.server.port=80
 
@@ -36,11 +36,11 @@ services:
     labels:
       - traefik.enable=true
       - traefik.docker.network=traefik-public
-      - traefik.http.routers.frontend.rule=Host(`аптека-05.рф`) || Host(`www.аптека-05.рф`)
+      - traefik.http.routers.frontend.rule=Host(`xn--05-6kcay4a7ay.xn--p1ai`) || Host(`www.xn--05-6kcay4a7ay.xn--p1ai`)
       - traefik.http.routers.frontend.entryPoints=http
       - traefik.http.services.frontend.loadBalancer.server.port=80
-      - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.аптека-05.рф/(.*)$$
-      - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}аптека-05.рф/$${2}
+      - traefik.http.middlewares.frontend-redirect.redirectRegex.regex=^(https?://)www.xn--05-6kcay4a7ay.xn--p1ai/(.*)$$
+      - traefik.http.middlewares.frontend-redirect.redirectRegex.replacement=$${1}xn--05-6kcay4a7ay.xn--p1ai/$${2}
       - traefik.http.middlewares.frontend-redirect.redirectRegex.permanent=true
       - traefik.http.routers.frontend.middlewares=frontend-redirect
 
