--- a/site/.env.prod
+++ b/site/.env.prod
@@ -1,6 +1,6 @@
 APP_NAME="Сеть аптек 120/80"
 APP_KEY=
-APP_URL=https://120на80.рф
+APP_URL=https://аптека05.рф
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -17,8 +17,8 @@ QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 
-SESSION_DOMAIN=.120на80.рф
-SANCTUM_STATEFUL_DOMAINS=*.120на80.рф
+SESSION_DOMAIN=.аптека05.рф
+SANCTUM_STATEFUL_DOMAINS=*.аптека05.рф
 
 REDIS_HOST=redis
 REDIS_CLIENT=predis
