--- a/site/public/mix-manifest.json
+++ b/site/public/mix-manifest.json
@@ -1,25 +1,25 @@
 {
-    "/js/app.js": "/js/app.js?id=5aec3907f92abafdefbd",
-    "/css/app.css": "/css/app.css?id=43dd428915c59f2e7e5c",
-    "/images/404.png": "/images/404.png?id=1d2c9627617a68df1b9c",
-    "/images/banner.jpg": "/images/banner.jpg?id=9d2682b91f7d4849be40",
-    "/images/cart.png": "/images/cart.png?id=815db83fc1340d80345f",
-    "/images/circle-cart.png": "/images/circle-cart.png?id=0c73731e4ad8e8a96e79",
-    "/images/circle-fav.png": "/images/circle-fav.png?id=d5fcf9fc6d14b66bc0ce",
-    "/images/default.png": "/images/default.png?id=5872b89dfd3cf2aefc41",
-    "/images/delivery_home.png": "/images/delivery_home.png?id=9728d3388aabff23d386",
-    "/images/fav.png": "/images/fav.png?id=7d47806e70413ba65aec",
-    "/images/footer-line.png": "/images/footer-line.png?id=d40326c1fecaa1092f6d",
-    "/images/footer.png": "/images/footer.png?id=baa8978658ae642cd4ff",
-    "/images/heart.png": "/images/heart.png?id=f045fd27dfd7718c313e",
-    "/images/like.png": "/images/like.png?id=cd7039fd5564e798560f",
-    "/images/logo.svg": "/images/logo.svg?id=5349ac7d05f535c116db",
-    "/images/logo_min.png": "/images/logo_min.png?id=d20a0669f46fd3e2ddbc",
-    "/images/logo_min.svg": "/images/logo_min.svg?id=b540f6de2784fb738020",
-    "/images/menu.png": "/images/menu.png?id=c9e17cb5497617bbffe2",
-    "/images/payments.png": "/images/payments.png?id=b8220951e768f542db27",
-    "/images/sale-icon.png": "/images/sale-icon.png?id=e971595fe71e6c198d92",
-    "/images/sale-price.png": "/images/sale-price.png?id=a30da45d9854b93999f1",
-    "/images/sale.png": "/images/sale.png?id=d9008a2f42bda34daf4e",
-    "/images/sale.svg": "/images/sale.svg?id=ccc98a6f5ae25655c2cf"
+    "/js/app.js": "/js/app.js?id=7c945d9b2e13b31b63cac4740fd4608c",
+    "/css/app.css": "/css/app.css?id=6602e245379bf637050e2594a6db1030",
+    "/images/404.png": "/images/404.png?id=1d2c9627617a68df1b9ccd230991b5b3",
+    "/images/banner.jpg": "/images/banner.jpg?id=9d2682b91f7d4849be4089e24583bb8e",
+    "/images/cart.png": "/images/cart.png?id=815db83fc1340d80345f6f8f66163f0b",
+    "/images/circle-cart.png": "/images/circle-cart.png?id=0c73731e4ad8e8a96e79a3034b29ab35",
+    "/images/circle-fav.png": "/images/circle-fav.png?id=d5fcf9fc6d14b66bc0ce7051bcf2acce",
+    "/images/default.png": "/images/default.png?id=5872b89dfd3cf2aefc414b8f8c83738c",
+    "/images/delivery_home.png": "/images/delivery_home.png?id=9728d3388aabff23d38656b67708de64",
+    "/images/fav.png": "/images/fav.png?id=7d47806e70413ba65aec5ce8c41862bc",
+    "/images/footer-line.png": "/images/footer-line.png?id=d40326c1fecaa1092f6db15a51544304",
+    "/images/footer.png": "/images/footer.png?id=baa8978658ae642cd4ff1345ad7ae1cd",
+    "/images/heart.png": "/images/heart.png?id=f045fd27dfd7718c313eb57489e09c99",
+    "/images/like.png": "/images/like.png?id=cd7039fd5564e798560f5750099b295e",
+    "/images/logo.svg": "/images/logo.svg?id=5349ac7d05f535c116db5935f9071a4d",
+    "/images/logo_min.png": "/images/logo_min.png?id=d20a0669f46fd3e2ddbc6dbe7cff7d99",
+    "/images/logo_min.svg": "/images/logo_min.svg?id=8c5fd6b0102b92b41f3e1908e324fabf",
+    "/images/menu.png": "/images/menu.png?id=c9e17cb5497617bbffe24bdfe418c9b3",
+    "/images/payments.png": "/images/payments.png?id=b8220951e768f542db279d6f808b8d2d",
+    "/images/sale-icon.png": "/images/sale-icon.png?id=e971595fe71e6c198d92c8a0eae23e5c",
+    "/images/sale-price.png": "/images/sale-price.png?id=a30da45d9854b93999f1b38c0ebd1a59",
+    "/images/sale.png": "/images/sale.png?id=d9008a2f42bda34daf4ea063fd85b723",
+    "/images/sale.svg": "/images/sale.svg?id=ccc98a6f5ae25655c2cfc4dfab8348c9"
 }
