--- a/panel/package.json
+++ b/panel/package.json
@@ -12,6 +12,7 @@
     "@types/react-draft-wysiwyg": "^1.13.4",
     "antd": "^4.18.2",
     "classnames": "^2.3.1",
+    "dotenv": "^16.0.0",
     "draft-convert": "^2.1.12",
     "draft-js": "^0.11.7",
     "moment": "^2.29.1",
