--- a/site/composer.json
+++ b/site/composer.json
@@ -19,6 +19,7 @@
         "guzzlehttp/guzzle": "^7.0.1",
         "hflabs/dadata": "^20.12",
         "intervention/image": "^2.5",
+        "kalnoy/nestedset": "^6.0",
         "laravel/framework": "^8.12",
         "laravel/sanctum": "^2.13",
         "laravel/tinker": "^2.5",
