--- a/site/docker/prod/php-fpm/Dockerfile
+++ b/site/docker/prod/php-fpm/Dockerfile
@@ -35,8 +35,7 @@ COPY --from=builder /app ./
 COPY ./ ./
 
 RUN chown www-data:www-data ./storage ./bootstrap/cache -R \
-    && php artisan key:generate --ansi \
-    && php artisan storage:link --ansi
+    && php artisan key:generate --ansi && php artisan storage:link --ansi
 
 HEALTHCHECK --interval=5s --timeout=3s --start-period=1s \
     CMD REDIRECT_STATUS=true SCRIPT_NAME=/ping SCRIPT_FILENAME=/ping REQUEST_METHOD=GET \
