--- a/site/public/mix-manifest.json
+++ b/site/public/mix-manifest.json
@@ -1,8 +1,9 @@
 {
-    "/js/app.js": "/js/app.js?id=bb6c407ee4f632972b07d39dea2a8bf5",
-    "/css/app.css": "/css/app.css?id=6beb474d1b4637b753bc2301f6d3a5c4",
+    "/js/app.js": "/js/app.js?id=b87d289c8ee6057fb8a0fee2b8bed961",
+    "/css/app.css": "/css/app.css?id=d7345493ba16bf1974da8ecad2e6df75",
     "/images/404.png": "/images/404.png?id=1d2c9627617a68df1b9ccd230991b5b3",
-    "/images/banner.jpg": "/images/banner.jpg?id=9d2682b91f7d4849be4089e24583bb8e",
+    "/images/banner-mobile.png": "/images/banner-mobile.png?id=953faae533998d1e9961e227b50fe0fb",
+    "/images/banner.png": "/images/banner.png?id=a6851bb2521c0a3facd88b0134929c27",
     "/images/cart.png": "/images/cart.png?id=815db83fc1340d80345f6f8f66163f0b",
     "/images/circle-cart.png": "/images/circle-cart.png?id=0c73731e4ad8e8a96e79a3034b29ab35",
     "/images/circle-fav.png": "/images/circle-fav.png?id=d5fcf9fc6d14b66bc0ce7051bcf2acce",
@@ -15,7 +16,7 @@
     "/images/like.png": "/images/like.png?id=cd7039fd5564e798560f5750099b295e",
     "/images/logo.svg": "/images/logo.svg?id=5349ac7d05f535c116db5935f9071a4d",
     "/images/logo_min.png": "/images/logo_min.png?id=d20a0669f46fd3e2ddbc6dbe7cff7d99",
-    "/images/logo_min.svg": "/images/logo_min.svg?id=b540f6de2784fb738020c1d4598d7aa2",
+    "/images/logo_min.svg": "/images/logo_min.svg?id=8c5fd6b0102b92b41f3e1908e324fabf",
     "/images/menu.png": "/images/menu.png?id=c9e17cb5497617bbffe24bdfe418c9b3",
     "/images/payments.png": "/images/payments.png?id=b8220951e768f542db279d6f808b8d2d",
     "/images/sale-icon.png": "/images/sale-icon.png?id=e971595fe71e6c198d92c8a0eae23e5c",
