change roles & add draggable image

--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -11,7 +11,7 @@ services:
         constraints: [ node.role == manager ]
 
   traefik:
-    image: traefik:2.6
+    image: traefik:2.7
     command:
       --providers.docker=true
       --providers.docker.watch=true
@@ -137,6 +137,35 @@ services:
       update_config:
         parallelism: 1
         delay: 5s
+  
+  site-php-cli:
+    image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
+    environment:
+      APP_NAME: Сеть аптек 120/80
+      APP_URL: https://аптека05.рф
+      LOG_CHANNEL: stack
+      LOG_LEVEL: debug
+      DB_CONNECTION: pgsql
+      DB_HOST: db-postgres
+      DB_DATABASE: app
+      DB_USERNAME: app
+      DB_PASSWORD: ${DB_PASSWORD}
+      FILESYSTEM_DRIVER: public
+      BROADCAST_DRIVER: redis
+      CACHE_DRIVER: redis
+      QUEUE_CONNECTION: redis
+      SESSION_DRIVER: redis
+      SESSION_LIFETIME: 120
+      REDIS_HOST: redis
+      REDIS_CLIENT: predis
+      MAIL_HOST: smtp.yandex.ru
+      MAIL_PORT: 465
+      MAIL_USERNAME: info@120на80.рф
+      MAIL_PASSWORD: ${MAIL_PASSWORD}
+      MAIL_FROM_ADDRESS: info@120на80.рф
+      MAIL_FROM_NAME: Сеть аптек 120/80
+    volumes:
+      - uploads:/app/storage/app/public
 
   site-migration:
     image: ${REGISTRY}/pharm-site-php-cli:${IMAGE_TAG}
