--- a/panel/package.json
+++ b/panel/package.json
@@ -8,6 +8,7 @@
     "@types/draft-js": "^0.11.9",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.9",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "antd": "^4.18.2",
@@ -17,6 +18,7 @@
     "draft-js": "^0.11.7",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-redux": "^7.2.6",
